<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Dives</string>
    <string name="app_name">Dive Planner</string>
    <string name="menunewdive">New Dive</string>
    <string name="date_widgets_example_dateDisplay_text"></string>
    <string name="date_widgets_example_pickTime_text">change the time</string>
    <string name="date_widgets_example_pickDate_text">change the date</string>
    <string name="quit">Quit</string>
    <string name="newdive_save">Save</string>
    <string name="app_description">It is now possible to store  your dives on your mobile phone.</string>
    <string name="logbook_button_label">Logbook</string>
    <string name="logbook_planner_label">Planner</string>
    <string name="OpenPlanner">Accept</string>
    <string name="OpenDiveLog">Open dive log </string>
    <string name="welcome_show_later">Show this message later</string>
    <string name="welcome_intro">This software is provided free of charge for experienced mixed gas rebreather divers to evaluate m-value gradient profiles based on Erik Baker\'s m-value gradient calculations and the Buhlmann ZHL16-B decompression model.\
This software is experimental, it probably contains bugs and should not be relied upon for actual dives. Use it at your own risk.\n\n\<b>WARNING</b>\nIf you follow dive schedules generated by this software you could suffer decompression sickness, serious injury or possibly death.\
The author does not warrant that this software accurately reflects Buhlmann\'s algorithms, or that it will produce safe, reliable, results.\n\n\
Diving in general is fraught with risk, and decompression diving using mixed gases and rebreathers adds significantly more risk.\
This software is not intended for uneducated users. This software and the decompression schedules it produces are tools for experienced mixed-gas rebreather decompression divers only. If you have not been properly trained in mixed-gas rebreather decompression diving by an internationally recognized technical certification agency and/or don\'t have a firm handle on decompression planning and mixed-gas diving, DO NOT USE THIS SOFTWARE OR THE DIVE SCHEDULES CREATED BY IT.\n\n\
If you do not understand or do not agree DO NOT use this software and uninstall it from your device.\n\n\
LICENSE\nThis software is \ncopyright © 2005-2010 - Guy Wittig.\ncopyright © 2010-2012 - Maciej Kaniewski.\n\n

This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation version 3.\n\n\
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\n\n</string>
    <string name="gas_dialog_he2_label">He2</string>
    <string name="gas_dialog_o2_label">O2</string>
    <string name="gas_dialog_ppo2_label">ppO2</string>
    <string name="gas_dialog_n2_label">N2</string>
    <string name="gas_dialog_mod_label">MOD</string>
    <string name="gas_dialog_title">Edit gas</string>
    <string name="preferences">Preferences</string>
    <string name="button_add_gas">Add</string>
    <string name="oc_bailout_checkbox_text">Gas switch/Bailout</string>
    <string name="plan_menu_about">About</string>
    <string name="about_text" formatted="false">
        &lt;b&gt;Main contributors :&lt;/b&gt;&lt;br&gt;
        Guy Wittig - author of mv-Plan &lt;br&gt;
		Maciej Kaniewski - contributor to mvPlan and author of aScuba.&lt;br&gt;
		&lt;br&gt;
		&lt;b&gt;Thanks to :&lt;/b&gt;&lt;br&gt;
		Fabrice Cetre&lt;br&gt;
		&lt;br&gt;
        &lt;b&gt;Issues and enhancements:&lt;/b&gt;&lt;br&gt;
	http://code.google.com/p/ascuba/issues/list\n</string>

</resources>